--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -7,10 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <!--local development -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
+    <!--end of local dev't -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <div class="headers">
+<div class="headers">
 <h3 >Shopping Assistant</h3></div>
 <div class="search_area">
         <form method="GET" action="">
@@ -28,29 +32,38 @@
 </section>
 <section id="section_two">
 
-<div class="container">
+<div class="container-fluid" id="products_container">
     {% if products %}
     <div class="row">
-    <div class="col-md-4 col-sm-6  product-name"><h4>Product Name</h4><hr>
-        {% for prod in products %}
-            <a href="{% url  'kenyan_stores_scraper:details' prod.id  %}" class="{{ prod.product_name }}">{{ prod.product_name }}</a><hr>
-        {% endfor %}
+        <div class="col-md-3 col-sm-6"><h4>Product Name</h4><hr></div>
+        <div class="col-md-7 col-sm-6 product-keyfeatures"><h4>KeyFeatures</h4><hr></div>
+        <div class="col-md-2 product-image"><h4>Product Image</h4><hr>
+        
+    </div>
+         {% for prod in products%}
+    <div class="row">
+       
+    <div class="col-md-3 col-sm-6  product-name">
+        <a href="{% url  'kenyan_stores_scraper:details' prod.id  %}" class="{{ prod.product_name }}">{{ prod.product_name }}</a>
+       
+
 
     </div>
 
-    <div class="col-md-4 col-sm-6 product-keyfeatures"><h4>KeyFeatures</h4><hr>
-        {% for prod in products %}
-            <p class="{{ prod.product_name }}">{{ prod.product_key_features }}</p><hr>
-        {% endfor %}
+    <div class="col-md-7 col-sm-6 product-keyfeatures">
+        
+            <p class="details">{{ prod.product_key_features }}</p>
+      
 
     </div>
-    <div class="col-md-4 col-sm-6 product-image"><h4>Product Image</h4><hr>
-        {% for prod in products %}
-            <p><img class="{{ prod.product_name }}" src="{{ prod.product_image }}" height="80px"> </p><hr>
-        {% endfor %}
+    <div class="col-md-2 product-image">
+    
+            <p><img class="{{ prod.product_name }}" src="{{ prod.product_image }}" height="80px"> </p>
+        
     </div>
 
-</div>
+</div><hr>
+         {% endfor%}
 {% else %}
 
 <div class="row">
@@ -105,14 +118,19 @@
         <a  href="#" class="fa fa-whatsapp"></a>
         <a  href="https://www.google.com/kipkiruichirii" class="fa fa-google-plus"></a>
 
-        
+
 
 
     </section>
 </div>
-    
+
 
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<!--local development -->
+<script src="{% static 'js/jquery.js'%}"></script>
+<script src="{% static 'js/bootstrap.min.js'%}"></script>
+<script src="{% static 'js/format.js'%}"></script>
+<!--end of local dev -->
 </html>
