--- a/templates/main/results.html
+++ b/templates/main/results.html
@@ -1,28 +1,7 @@
+{% extends 'main/base.html'%}
 {% load static%}
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Details for {{prod.product_name}}</title>
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!--local development -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-
-    <!--end of local dev't -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
-	<div class="headers">
-	<h3  >Shopping Assistant</h3>
-
-	<div class="home_btn">	<a   href="{% url  'kenyan_stores_scraper:pdf'  %}" class="btns">Pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a   href="{% url 'kenyan_stores_scraper:home'%}" class="btns">Home</a>
-	</div>
-		<br><br>
-	</div>
+{%block title%}Details{%endblock%}
+{%block body%}
 
 
 	<h5 class="text-center" style="font-weight: bold">Details for product {{product.product_name}}</h5><hr>
@@ -107,40 +86,5 @@
 	<div class="row">
 	<p class="text-info text-justify container-fluid">Study the trend of the graph to have a proper understanding of the trend in prices.The lower the linepoint on the graph the lower the price.The price varies from store to store due to various deterministic factors.We ll compute the mean,median and standard deviation for each site.</p></div>
 </body>
-<footer>
-	<hr>
-	 <div class="row">
-    <section class="col-md-4 col-sm-12 footer-left">
 
-        <p><br>Let's code the Universe :)
-        Happy Coding</p>
-        <p>&copy;Chirchir Softwares 2018<span class="glyphicon glyphicon-cd"></span></span></p>
-    </section>
-    <div class="col-md-4 col-sm-12" ><br><br><br>
-        <h5 style="text-align:center;">Built with <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Love_Heart_symbol.svg/591px-Love_Heart_symbol.svg.png" height="27px" width="27px"> by Ezra Chirchir @chirie_ezra</h5>
-    </div>
-    <section class="col-md-4 col-sm-12 footer-right">
-    	<br>
-        <p>Connect  with me on </p>
-        <a href="https://www.facebook.com/EzraChirchir" class="fa fa-facebook-square"></a>
-        <a  href="https://twitter.com/chirie_ezra" class="fa fa-twitter"></a>
-        <a  href="https://www.youtube.com/EzraChirchir" class="fa fa-youtube"></a>
-        <a  href="#" class="fa fa-whatsapp"></a>
-        <a  href="https://www.google.com/kipkiruichirii" class="fa fa-google-plus"></a>
-
-
-    </section>
-</div>
-
-</footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/4.4.2/math.js"></script>
- <script src="{% static 'js/plot.js'%}"></script>
- <!--local development -->
- <script src="{% static 'js/jquery.js'%}"></script>
- <script src="{% static 'js/bootstrap.min.js'%}"></script>
- <script src="{% static 'js/format.js'%}"></script>
- <!--end of local dev -->
-</html>
+{%endblock%}
