--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -6,7 +6,7 @@
   <div class="form-group">
     <input type="text" class="form-control" name="search_keyword" placeholder="Search" style="width:200px;margin-left:60px;">
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default">Search</button>
 </form></li>
 {% endblock%}
 {% block body%}
@@ -29,14 +29,14 @@
         <div class="col-md-3 col-sm-6"><h4>Product Name</h4><hr></div>
         <div class="col-md-5 col-sm-4 product-keyfeatures"><h4>KeyFeatures</h4><hr></div>
         <div class="col-md-2 product-image"><h4>Product Image</h4><hr></div>
-        <div class="col-md-1 product-image"><h4>Track</h4><hr></div>
+        
         
     </div>
          {% for prod in products%}
     <div class="row">
        
     <div class="col-md-3 col-sm-6  product-name">
-        <a href="{% url  'kenyan_stores_scraper:details' prod.id  %}" class="{{ prod.product_name }}">{{ prod.product_name }}</a>
+        <a id="prod_link"href="{% url  'kenyan_stores_scraper:details' prod.id  %}" class="{{ prod.product_name }}">{{ prod.product_name }}</a>
        
 
 
@@ -53,11 +53,7 @@
             <p><img class="{{ prod.product_name }}" src="{{ prod.product_image }}" height="80px"> </p>
         
     </div>
-    <div class="col-md-1 track">
-    
-            <a href="#" class="btn btn-success">Add</a>
-        
-    </div>
+   
 
 </div><hr>
          {% endfor%}
