--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -11,16 +11,19 @@
     <!-- Bootstrap -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"> -->
     <!--local development -->
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
 
     <!--end of local dev't -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- <link rel="shortcut icon" href="{% static 'img/fav_vicon.ico'%}" ="image/x-icon">
     <link rel="icon" href="{% static 'img/fav_vicon.ico'%}" type="image/x-icon"> -->
-    <link rel="icon" href="img/fav_vicon.ico">
+    <link rel="icon"  type="image/png" href="{% static 'img/shop.png' %}">
 
 
      <!--end of bootstraping -->
@@ -57,8 +60,8 @@
             <li><a href="{% url 'kenyan_stores_scraper:logout'%}"><span class="glyphicon glyphicon-off"></span>&nbsp;Logout</a></li>
 
             {%else %}
-            <li><a href="{% url 'kenyan_stores_scraper:register'%}"><span class="glyphicon glyphicon-pencil"></span>&nbsp;
-            Register</a></li>
+            <li><a href="{% url 'kenyan_stores_scraper:register'%}" title="Create an account"><span class="glyphicon glyphicon-pencil"></span>&nbsp;
+            SignUp</a></li>
             <li><a href="{% url 'kenyan_stores_scraper:login'%}"><span class="glyphicon glyphicon-user"></span>&nbsp;
             Login</a></li>
             {%endif%}
@@ -92,7 +95,7 @@
     <section class="col-md-4 footer-left">
         <p><br>Let's code the Universe :)
         Happy Coding</p>
-        <p>&copy;Chirchir Softwares 2018<span class="glyphicon glyphicon-cd"></span></span></p>
+        <p>&copy;Chirchir Softwares 2018</p>
     </section>
     <div class="col-md-4"><br><br><br>
         <h5 style="text-align:center;">Built with<span class="fa fa-heart"></span> by Ezra Chirchir @chirie_ezra</h5>
@@ -113,6 +116,13 @@
 
 
 </footer>
+<script>
+    lightbox.option({
+      'resizeDuration': 200,
+      'wrapAround': true,
+      'showImageNumberLabel':false
+    })
+</script>
 
 <!--end footer -->
 <!--Javascript Sourcing -->
@@ -120,10 +130,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/4.4.2/math.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="{% static 'js/jquery.js'%}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src=" {% static 'js/search_ajax.js' %}"></script>
+<script src=" {% static 'js/lightbox.js' %}"></script>
 <script src="{% static 'js/format.js'%}"></script>
 <script src="{% static 'js/plot.js'%}"></script>
 
